--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
 .animate{
 	animation: jump 500ms;
 }
+
+@keyframes mymove {
+   from {right: 0 px;}
+   to {left: 0px;}
+}
+
 @keyframes jump{
 	0%{top:150px;}
 	30%{top: 100px;}
@@ -33,8 +39,9 @@
 	background-color: blue; 
 	position: relative;
 	top: 130px;
-	left: 480px; 
-	animation: block is infinite linear;
+	left: 480px;
+    animation: mymove 1s infinite linear;
+	
 }
 @keyframes block{
 	0%{left:480px;}
